# rs-zip2meta

./: .gitignore  Cargo.toml  README.md  build-wasi.sh  rs-zip2meta  rs-zip2meta.wasm  run.sh
src/: lib.rs  main.rs
