[package]
name = "rs-zip2meta"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.zip]
version = "2.6.1"
default-features = false
features = [
	"deflate",
]

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.140"
default-features = false
features = [
	"std",
]
